# space-lion

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  Makefile  README  build_external.makefile  build_libs.makefile  space-lion.sln
docs/: ftv_poisson.tex
docs/fapra/: README.tex  proposal.tex
resources/entities/: camera.json  outflyer.json  pointlight.json
resources/levels/: debug_scene.json
resources/materials/: adfr_debug.slmtl  debug.slmtl  default.slmtl  demoMaterial.slmtl  demo_hangar.slmtl  dfr_debug.slmtl  sponza_textures.slmtl
resources/materials/fapra/: default_terrain.slmtl
resources/materials/templates/: gold.slmtl  silver.slmtl
resources/meshes/: blender_box.fbx  blender_box_ascii.fbx  cp.fbx  cv.fbx  demo_hangar.FBX  max_box.fbx  maya_box.fbx  monkey.fbx
resources/meshes/editor/: move_gizmo.fbx
resources/shaders/: adfr_lighting_f.glsl  adfr_solidSurface_f.glsl  atmosphere_f.glsl  atmosphere_v.glsl  compositing_f.glsl  dfr_geomPass_f.glsl  dfr_lighting_f.glsl  dfr_solidSurface_f.glsl  dfr_solidSurface_v.glsl  f_coherence.glsl  f_distanceMapping.glsl  f_flat.glsl  f_ftv_coherence.glsl  f_ftv_gradient.glsl  f_ftv_imageInpainting.glsl  f_ftv_improvedInpainting.glsl  f_ftv_mask.glsl  f_ftv_poisson.glsl  f_ftv_seperatedGaussian.glsl  f_ftv_volRen.glsl  f_fxaa.glsl  f_hesse.glsl  f_idle.glsl  f_imageInpainting.glsl  f_phong.glsl  f_poisson.glsl  f_seperatedGaussian.glsl  f_stamp.glsl  f_volRen.glsl  fwd_pbrMetallic_f.glsl  genericPostProc_v.glsl  inscatter_single_c.glsl  simple_forward_frag.glsl  simple_forward_vert.glsl  skinned_mesh_notx_f.glsl  skinned_mesh_notx_v.glsl  surface_lighting_f.glsl  surface_lighting_v.glsl  transmittance_c.glsl  v_coherence.glsl  (+6 more)
resources/shaders/debug/: skinned_mesh_bone_f.glsl  skinned_mesh_bone_v.glsl
resources/shaders/fapra/: deferred_compositing.glsl  inscatter_single_c.glsl  irradiance_single_c.glsl  sky_f.glsl  terrain_f.glsl  (+4 more)
resources/textures/: demo_hangar_normal.tga  struct_surface_normal.ppm
resources/volumeData/: f.raw
space-lion/: main.cpp  space-lion.vcxproj  space-lion.vcxproj.filters
space-lion/src/: GLSLProgram.cpp  GLSLProgram.h  abstractPostProcessor.cpp  abstractPostProcessor.h  framebufferObject.cpp  framebufferObject.h  ftvTestbench.cpp  ftvTestbench.h  ftv_postProcessor.cpp  ftv_postProcessor.h  ftv_renderHub.cpp  ftv_renderHub.h  ftv_scene.cpp  ftv_scene.h  ftv_volumetricSceneObject.h  fxaaPostProcessor.cpp  fxaaPostProcessor.h  idlePostProcessor.cpp  idlePostProcessor.h  material.cpp  material.h  messageReceiver.h  poissonImageProcessor.cpp  poissonImageProcessor.h  postProcessor.cpp  postProcessor.h  renderHub.cpp  renderHub.h  renderParser.cpp  renderParser.h  resourceLoader.cpp  resourceLoader.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  sceneCamera.cpp  sceneCamera.h  sceneEntity.cpp  sceneEntity.h  (+17 more)
src/Editor/: CameraController.cpp  CameraController.hpp  Controls.cpp  Controls.hpp  EditorSelectComponent.cpp  EditorSelectComponent.hpp  EditorUI.cpp  EditorUI.hpp  TransformTool.cpp  TransformTool.hpp
src/EngineCore/: AdvancedDeferredRenderingPipeline.cpp  AdvancedDeferredRenderingPipeline.hpp  AirplanePhysicsComponent.cpp  AirplanePhysicsComponent.hpp  AnimationSystems.cpp  AnimationSystems.hpp  AtmosphereComponent.hpp  AtmosphereComponentManager.cpp  AtmosphereComponentManager.hpp  BSplineComponent.cpp  BSplineComponent.hpp  BaseComponentManager.hpp  BaseMultiInstanceComponentManager.hpp  BaseResourceManager.hpp  BaseSingleInstanceComponentManager.hpp  BillboardComponentManager.cpp  BillboardComponentManager.hpp  BoundingBoxComponent.cpp  BoundingBoxComponent.hpp  BoundingCylinderComponent.cpp  BoundingCylinderComponent.hpp  BoundingSphereComponent.cpp  BoundingSphereComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  ComponentStorage.hpp  Controls.cpp  Controls.hpp  DebugNameComponentManager.cpp  DebugNameComponentManager.hpp  DecalComponent.cpp  DecalComponent.hpp  DeferredRenderingPipeline.hpp  EngineFrontend.cpp  EngineFrontend.hpp  EntityManager.cpp  EntityManager.hpp  Frame.cpp  Frame.hpp  GenericTextureLayout.hpp  (+81 more)
src/engine/: AdvancedDeferredRenderingPipeline.cpp  AdvancedDeferredRenderingPipeline.hpp  AirplanePhysicsComponent.cpp  AirplanePhysicsComponent.hpp  AtmosphereComponent.cpp  AtmosphereComponent.hpp  AtmosphereMaterial.cpp  AtmosphereMaterial.hpp  CameraComponent.cpp  CameraComponent.h  CameraComponent.hpp  ComputeJobs.cpp  ComputeJobs.hpp  Controls.cpp  Controls.hpp  DeferredRenderingPipeline.cpp  DeferredRenderingPipeline.hpp  EntityManager.cpp  EntityManager.hpp  GlobalCoreComponents.hpp  InterfaceMeshComponent.cpp  InterfaceMeshComponent.hpp  LightComponent.cpp  LightComponent.h  LightComponent.hpp  MTQueue.hpp  Material.cpp  Material.h  Material.hpp  PointlightComponent.cpp  PointlightComponent.hpp  RenderJobs.cpp  RenderJobs.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  ResourceManager.cpp  ResourceManager.h  SelectComponent.hpp  StaticMeshComponent.cpp  StaticMeshComponent.hpp  (+11 more)
src/fapra/: atmosphere.cpp  atmosphere.h  fapra_renderHub.cpp  fapra_renderHub.h  main.cpp  planetaryScene.cpp  planetaryScene.h  terrain.cpp  terrain.h
src/ftv/: ftvTestbench.cpp  ftvTestbench.h  ftv_postProcessor.cpp  ftv_postProcessor.h  ftv_renderHub.cpp  ftv_renderHub.h  ftv_resourceManager.cpp  ftv_resourceManager.h  ftv_scene.cpp  ftv_scene.h  ftv_volumetricSceneObject.h  main.cpp
vs2013/: engine.vcxproj  engine.vcxproj.filters  fault-tolerant-visualization.vcxproj  fault-tolerant-visualization.vcxproj.filters  space-lion.sln
vs2013/engine/: engine.vcxproj  engine.vcxproj.filters  engine.vcxproj.invor.nvuser
vs2013/fapra/: fapra.vcxproj  fapra.vcxproj.filters
vs2013/fault-tolerant-visualization/: fault-tolerant-visualization.vcxproj  fault-tolerant-visualization.vcxproj.filters
vs2015/: space-lion.sln
vs2015/engine/: engine.vcxproj  engine.vcxproj.filters
vs2017/space-lion/: space-lion.vcxproj  space-lion.vcxproj.filters
vs2019/: space-lion.sln
vs2019/space-lion/: space-lion.vcxproj  space-lion.vcxproj.filters
(+85 files in other folders)
